--- a/theme/default/login/css/styles.css
+++ b/theme/default/login/css/styles.css
@@ -1,41 +1,70 @@
 body {
     margin: 0px;
     width: 100%;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 11px;
 }
 
 img{
     border: 0px;
 }
 
+h1 {
+	font-size: 11px;
+	vertical-align: middle;
+	text-align: left;
+	margin-left: 50px;
+	margin-top: 50px;
+}
+
+h2 {
+	font-size: 11px;
+	vertical-align: middle;
+	text-align: left;
+	margin-left: 50px;
+	margin-top: 20px;
+}
+
 #loginContainer{
-    width: 40%;
-    margin-left: 30%;
-    margin-right: 30%;
+    width: 424px;
+    height: 475px;
+    margin-left: auto;
+    margin-right: auto;
+    border-color: #B6B6B6;
+    border-width: 1px;
+    border-style: solid;
 }
 
 #headerBar{
     width: 100%;
     height: 30px;
-}
-
-#leftRivet{
-    display: inline;
-}
-
-#headerTitle{
-    width: 100%;
-    height: 30px;
-    position: relative;
-    top: 0px;
-    left: 10px;
-    display: inline-block;
     background-image: url('../images/headerBg.png');
     background-repeat: repeat-x;
 }
 
+#leftRivet{
+    display: inline-block;
+}
+
+#headerTitle{
+    width: 424px;
+    height: 30px;
+    text-align: center;
+    position: absolute;
+    top: 35px;
+}
+
 #rightRivet{
-    margin-right: 0px;
-    display: inline;
+    float: right;
+}
+
+
+#line{
+    margin-left: 50px;
+	margin-right: 50px;
+	border-top-width: 1px;
+	border-top-style: solid;
+	border-top-color: #b6b6b6;
 }
 
 #footer{
