--- a/theme/default/login/css/styles.css
+++ b/theme/default/login/css/styles.css
@@ -27,7 +27,8 @@ h2 {
 
 #loginContainer{
     width: 424px;
-    height: 424px;
+    min-height: 424px;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
     border-color: #B6B6B6;
@@ -66,25 +67,37 @@ h2 {
 	border-top-color: #b6b6b6;
 }
 
-#txtUser{
-    margin-left: 50px;
-}
-
-#txtPass{
-    margin-left: 53px;
-}
-
 .success{
     text-align: center;
     color: #33CC33;
     width: 100%;
+    height: 20px;
 }
 
 .error{
     text-align: center;
     color: #FF0000;
     width: 100%;
+    height: 20px;
 }
+
+#login{
+    display: inline-block;
+    width: 100%;
+}
+
+.frmLabel{
+    width: 30%;
+    display: inline-block;
+    margin: 0px;
+}
+
+.frmInput{
+    width: 60%;
+    display: inline-block;
+    margin: 0px;
+}
+
 
 #footer{
     text-align: center;
