--- a/theme/default/login/css/styles.css
+++ b/theme/default/login/css/styles.css
@@ -31,6 +31,7 @@ h2 {
     height: auto;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 27px;
     border-color: #B6B6B6;
     border-width: 1px;
     border-style: solid;
@@ -53,6 +54,7 @@ h2 {
     text-align: center;
     position: absolute;
     top: 35px;
+    color: #9D9D9D;
 }
 
 #rightRivet{
