--- a/theme/default/register/css/styles.css
+++ b/theme/default/register/css/styles.css
@@ -1,3 +1,5 @@
+/* Global Tags */
+
 body {
     margin: 0px;
     width: 100%;
@@ -25,15 +27,9 @@ h2 {
 	margin-top: 20px;
 }
 
-#loginContainer{
-    width: 424px;
-    height: 424px;
-    margin-left: auto;
-    margin-right: auto;
-    border-color: #B6B6B6;
-    border-width: 1px;
-    border-style: solid;
-}
+
+
+/* Header */
 
 #headerBar{
     width: 100%;
@@ -52,10 +48,27 @@ h2 {
     text-align: center;
     position: absolute;
     top: 35px;
+    color: #9D9D9D;
 }
 
 #rightRivet{
     float: right;
+}
+
+
+
+/* Content  */
+
+#registerContainer{
+    width: 424px;
+    min-height: 424px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 27px;
+    border-color: #B6B6B6;
+    border-width: 1px;
+    border-style: solid;
 }
 
 #line{
@@ -66,14 +79,38 @@ h2 {
 	border-top-color: #b6b6b6;
 }
 
-#txtUser{
-    margin-left: 50px;
+.success{
+    text-align: center;
+    color: #33CC33;
+    width: 100%;
+    height: 20px;
 }
 
-#txtPass{
-    margin-left: 53px;
+.error{
+    text-align: center;
+    color: #FF0000;
+    width: 100%;
+    height: 20px;
 }
 
+#login{
+    display: inline-block;
+    width: 100%;
+}
+
+.frmLabel{
+    width: 30%;
+    display: inline-block;
+    margin: 0px;
+}
+
+.frmInput{
+    width: 60%;
+    display: inline-block;
+    margin: 0px;
+}
+
+/* Footer [Start] */
 
 #footer{
     text-align: center;
