--- a/theme/default/register/css/styles.css
+++ b/theme/default/register/css/styles.css
@@ -83,14 +83,14 @@ h2 {
     text-align: center;
     color: #33CC33;
     width: 100%;
-    height: 20px;
+    margin-top: 5px;
 }
 
 .error{
     text-align: center;
     color: #FF0000;
     width: 100%;
-    height: 20px;
+    margin-top: 5px;
 }
 
 #login{
