--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -1,5 +1,83 @@
+/* Global Tags */
+
 body {
     margin: 0px;
     width: 100%;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 11px;
 }
 
+img{
+    border: 0px;
+}
+
+h1 {
+	font-size: 11px;
+	vertical-align: middle;
+	text-align: left;
+	margin-left: 50px;
+	margin-top: 50px;
+}
+
+h2 {
+	font-size: 11px;
+	vertical-align: middle;
+	text-align: left;
+	margin-left: 50px;
+	margin-top: 20px;
+}
+
+
+
+/* Header */
+
+#headerBar{
+    width: 100%;
+    height: 30px;
+    background-image: url('../images/headerBg.png');
+    background-repeat: repeat-x;
+}
+
+#leftRivet{
+    display: inline-block;
+}
+
+#headerTitle{
+    width: 424px;
+    height: 30px;
+    text-align: center;
+    position: absolute;
+    top: 35px;
+    color: #9D9D9D;
+}
+
+#rightRivet{
+    float: right;
+}
+
+
+
+/* Content  */
+
+#loginContainer{
+    width: 424px;
+    min-height: 424px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 27px;
+    border-color: #B6B6B6;
+    border-width: 1px;
+    border-style: solid;
+}
+
+#login{
+    display: inline-block;
+    width: 100%;
+}
+
+/* Footer [Start] */
+
+#footer{
+    text-align: center;
+}
