--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -39,29 +39,47 @@ h2 {
 }
 
 #leftRivet{
-    display: inline-block;
+    float: left;
 }
 
 #headerTitle{
-    width: 424px;
-    height: 30px;
     text-align: center;
-    position: absolute;
-    top: 35px;
+    display: inline;
+    position: relative;
+    top: 7px;
     color: #9D9D9D;
+}
+
+#shortcuts{
+    
+}
+
+#search{
+    
 }
 
 #rightRivet{
     float: right;
 }
 
+#headerBanner{
+    width: 100%;
+    background-image: url('../images/bannerBg.png');
+    background-repeat: repeat-x;
+}
+
+#bannerRight{
+    float: right;
+}
+
+
+
 
 
 /* Content  */
 
-#loginContainer{
-    width: 424px;
-    min-height: 424px;
+#mainContainer{
+    width: 80%;
     height: auto;
     margin-left: auto;
     margin-right: auto;
@@ -69,11 +87,6 @@ h2 {
     border-color: #B6B6B6;
     border-width: 1px;
     border-style: solid;
-}
-
-#login{
-    display: inline-block;
-    width: 100%;
 }
 
 /* Footer [Start] */
