--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -50,14 +50,6 @@ h2 {
     color: #9D9D9D;
 }
 
-#shortcuts{
-    
-}
-
-#search{
-    
-}
-
 #rightRivet{
     float: right;
 }
@@ -72,8 +64,41 @@ h2 {
     float: right;
 }
 
+#shortcuts{
+    float: right;
+    position: relative;
+    top: 10px;
+    padding-right: 5px;
+}
+
+#search{
+    width: 170px;
+    height: 20px;
+    position: relative;
+    top: 5px;
+    float: right;
+}
 
 
+/* Search */
+
+#searchLeft{
+    float: left;
+}
+
+#searchCenter{
+    display: inline;
+    background-color: #7C7B7B;
+}
+
+#searchRight{
+    float: right;
+}
+
+#txtQuery{
+    height: 18px;
+    background-color: #7C7B7B;
+}
 
 
 /* Content  */
