--- a/theme/default/login/css/styles.css
+++ b/theme/default/login/css/styles.css
@@ -87,13 +87,16 @@ h2 {
 }
 
 .error{
+    background-color: #F5A9A9;
+    border-color: #FF0000;
+    border-width: 1px;
+    border-style: solid;
     text-align: center;
-    color: #FF0000;
-    width: 100%;
-    height: 20px;
+    padding: 5px;
+    margin: 5px;
 }
 
-#login{
+.login{
     display: inline-block;
     width: 100%;
 }
