--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -68,7 +68,7 @@ h2 {
     float: right;
     position: relative;
     top: 10px;
-    padding-right: 5px;
+    padding-right: 20px;
 }
 
 #search{
@@ -101,6 +101,37 @@ h2 {
 }
 
 
+/* Sidebar */
+
+#sidebar{
+    width: 20%;
+    height: 30px;
+    background-image: url('../images/headerBg.png');
+    background-repeat: repeat-x;
+    border-color: #B6B6B6;
+    border-width: 1px;
+    border-style: solid;
+}
+
+#sidebar #leftRivet{
+    float: left;
+}
+
+#sidebar #headerTitle{
+    text-align: center;
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    top: -23px;
+    color: #9D9D9D;
+}
+
+#sidebar #rightRivet{
+    float: right;
+}
+
+
+
 /* Content  */
 
 #mainContainer{
@@ -112,6 +143,10 @@ h2 {
     border-color: #B6B6B6;
     border-width: 1px;
     border-style: solid;
+}
+
+#content{
+    margin: 20px;
 }
 
 /* Footer [Start] */
