--- a/theme/default/register/css/styles.css
+++ b/theme/default/register/css/styles.css
@@ -71,7 +71,7 @@ h2 {
     border-style: solid;
 }
 
-#line{
+.line{
     margin-left: 50px;
 	margin-right: 50px;
 	border-top-width: 1px;
@@ -103,7 +103,7 @@ h2 {
     color: #FF0000;
 }
 
-#login{
+.register{
     display: inline-block;
     width: 100%;
 }
