--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -89,6 +89,10 @@ h2 {
 #searchCenter{
     display: inline;
     background-color: #7C7B7B;
+    position: absolute;
+    top: 0px;
+    height: 20px;
+    width: 83%;
 }
 
 #searchRight{
@@ -103,7 +107,7 @@ h2 {
 
 /* Sidebar */
 
-#sidebar{
+#sidebarLeft{
     width: 20%;
     height: 30px;
     background-image: url('../images/headerBg.png');
@@ -111,13 +115,15 @@ h2 {
     border-color: #B6B6B6;
     border-width: 1px;
     border-style: solid;
+    float: left;
+    margin: 2%;
 }
 
-#sidebar #leftRivet{
+#sidebarLeft #leftRivet{
     float: left;
 }
 
-#sidebar #headerTitle{
+#sidebarLeft #headerTitle{
     text-align: center;
     display: inline-block;
     position: relative;
@@ -126,10 +132,38 @@ h2 {
     color: #9D9D9D;
 }
 
-#sidebar #rightRivet{
+#sidebarLeft #rightRivet{
     float: right;
 }
 
+#sidebarRight{
+    width: 20%;
+    height: 30px;
+    background-image: url('../images/headerBg.png');
+    background-repeat: repeat-x;
+    border-color: #B6B6B6;
+    border-width: 1px;
+    border-style: solid;
+    float: right;
+    margin: 2%;
+}
+
+#sidebarRight #leftRivet{
+    float: left;
+}
+
+#sidebarRight #headerTitle{
+    text-align: center;
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    top: -23px;
+    color: #9D9D9D;
+}
+
+#sidebarRight #rightRivet{
+    float: right;
+}
 
 
 /* Content  */
@@ -146,8 +180,61 @@ h2 {
 }
 
 #content{
+    display: inline-block;
+    width: 51%;
+}
+
+
+/* Modules */
+
+#modules{
+    width: 100%;
+    display: inline-block;
+    
+}
+
+.header{
+    width: 100%;
+    border-color: #B6B6B6;
+    border-width: 1px;
+    border-style: solid;
+}
+
+.header{
+    width: 100%;
+    height: 30px;
+    background-image: url('../images/headerBg.png');
+    background-repeat: repeat-x;
+}
+
+
+.header #leftRivet{
+    float: left;
+}
+
+.header #headerTitle{
+    text-align: center;
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    top: -23px;
+    color: #9D9D9D;
+}
+
+.header #rightRivet{
+    float: right;
+}
+
+.module{
+    display: inline;
     margin: 20px;
 }
+
+.icon{
+    width: 25px;
+    height: 25px;
+}
+
 
 /* Footer [Start] */
 
