--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -182,22 +182,23 @@ h2 {
 #content{
     display: inline-block;
     width: 51%;
+    margin-top: 2%;
 }
 
 
 /* Modules */
 
-#modules{
+.modules{
     width: 100%;
     display: inline-block;
+    border-color: #B6B6B6;
+    border-width: 1px;
+    border-style: solid;
     
 }
 
 .header{
     width: 100%;
-    border-color: #B6B6B6;
-    border-width: 1px;
-    border-style: solid;
 }
 
 .header{
@@ -226,13 +227,16 @@ h2 {
 }
 
 .module{
-    display: inline;
-    margin: 20px;
+    display: inline-block;
+    width: 60px;
+    min-height: 60px;
 }
 
 .icon{
     width: 25px;
     height: 25px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
