--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -27,7 +27,12 @@ h2 {
 	margin-top: 20px;
 }
 
-
+h3 {
+	font-size: 11px;
+	vertical-align: middle;
+	text-align: left;
+    margin-left: 10px;
+}
 
 /* Header */
 
@@ -228,17 +233,85 @@ h2 {
 
 .module{
     display: inline-block;
-    width: 60px;
-    min-height: 60px;
+    width: 75px;
+    min-height: 75px;
+    text-align: center;
+    margin: 10px;
 }
 
 .icon{
     width: 25px;
     height: 25px;
+    display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
+.line{
+    margin-left: 50px;
+	margin-right: 50px;
+	border-top-width: 1px;
+	border-top-style: solid;
+	border-top-color: #b6b6b6;
+}
+
+.row{
+    display: inline-block;
+    width: 100%;
+}
+
+.frmLabel{
+    width: 30%;
+    display: inline-block;
+    margin: 0px;
+}
+
+.frmInput{
+    width: 60%;
+    display: inline-block;
+    margin: 0px;
+}
+
+.success{
+    background-color: #CEF6CE;
+    border-color: #81F781;
+    border-width: 1px;
+    border-style: solid;
+    text-align: center;
+    padding: 5px;
+    margin: 5px;
+}
+
+.error{
+    background-color: #F5A9A9;
+    border-color: #FF0000;
+    border-width: 1px;
+    border-style: solid;
+    text-align: center;
+    padding: 5px;
+    margin: 5px;
+}
+
+/* Sidebar */
+
+.c1{
+    background-color: #A6A6A6;
+}
+.c2{
+    background-color: #B6B6B6;
+}
+
+.label{
+    width: 50%;
+    display: inline-block;
+    margin: 0px;
+}
+
+.description{
+    width: 45%;
+    display: inline-block;
+    margin: 0px;
+}
 
 /* Footer [Start] */
 
