--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -195,6 +195,7 @@ h3 {
 
 .modules{
     width: 100%;
+    height: auto;
     display: inline-block;
     border-color: #B6B6B6;
     border-width: 1px;
@@ -234,9 +235,9 @@ h3 {
 .module{
     display: inline-block;
     width: 75px;
-    min-height: 75px;
+    min-height: 40px;
     text-align: center;
-    margin: 10px;
+    padding: 10px;
 }
 
 .icon{
