--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -117,6 +117,7 @@ h3 {
     height: 30px;
     background-image: url('../images/headerBg.png');
     background-repeat: repeat-x;
+    height: auto;
     border-color: #B6B6B6;
     border-width: 1px;
     border-style: solid;
@@ -146,6 +147,7 @@ h3 {
     height: 30px;
     background-image: url('../images/headerBg.png');
     background-repeat: repeat-x;
+    height: auto;
     border-color: #B6B6B6;
     border-width: 1px;
     border-style: solid;
