--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -114,12 +114,14 @@ h3 {
 
 .sidebarContainer{
     width: 100%;
+    height: 110%;
     background-image: url('../images/headerBg.png');
     background-repeat: repeat-x;
     border-color: #B6B6B6;
     border-width: 1px;
     border-style: solid;
     display: inline-block;
+    overflow: hidden;
 }
 
 #sidebarLeft{
@@ -128,6 +130,7 @@ h3 {
     margin-left: 2%;
     margin-right: 2%;
     float: left;
+    
 }
 
 #sidebarLeft #leftRivet{
