--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -34,6 +34,10 @@ h3 {
     margin-left: 10px;
 }
 
+meter{
+    width: 75%;
+}
+
 /* Header */
 
 #headerBar{
@@ -302,12 +306,14 @@ h3 {
 
 /* Sidebar */
 
-.c1{
+.rowStyle:nth-child(odd){
     background-color: #A6A6A6;
 }
-.c2{
+
+.rowStyle:nth-child(even){
     background-color: #B6B6B6;
 }
+
 
 .label{
     width: 50%;
