--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -116,6 +116,31 @@ meter{
 
 /* Sidebar */
 
+.headerBar{
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    background-image: url('../images/headerBg.png');
+    background-repeat: repeat-x;
+}
+
+.leftRivet{
+    float: left;
+    width: 11px;
+}
+
+.headerTitle{
+    display: inline-block;
+    position: relative;
+    top: 7px;
+    color: #A8A8A8;
+}
+
+.rightRivet{
+    float: right;
+    width: 11px;
+}
+
 .sidebarContainer{
     width: 100%;
     background-image: url('../images/headerBg.png');
@@ -140,19 +165,6 @@ meter{
     float: left;
 }
 
-#sidebarLeft #headerTitle{
-    text-align: center;
-    display: inline-block;
-    position: relative;
-    width: 100%;
-    top: -23px;
-    color: #9D9D9D;
-}
-
-#sidebarLeft #rightRivet{
-    float: right;
-}
-
 #sidebarRight{
     width: 20%;
     min-height: 70%;
@@ -161,24 +173,6 @@ meter{
     display: inline-block;
     float: right;
 }
-
-#sidebarRight #leftRivet{
-    float: left;
-}
-
-#sidebarRight #headerTitle{
-    text-align: center;
-    display: inline-block;
-    position: relative;
-    width: 100%;
-    top: -23px;
-    color: #9D9D9D;
-}
-
-#sidebarRight #rightRivet{
-    float: right;
-}
-
 
 /* Content  */
 
@@ -211,12 +205,16 @@ meter{
     border-width: 1px;
     border-style: solid;
     margin-bottom: 10px;
-    background-color: #FFFFFF;
-    
+    background-color: #FFFFFF; 
 }
 
-.header{
-    width: 100%;
+.content{
+    width: 51.5%;
+    height: auto;
+    position: relative;
+    margin-left: 24.25%;
+    margin-bottom: 10px;
+    background-color: #FFFFFF; 
 }
 
 .header{
@@ -233,10 +231,12 @@ meter{
 
 .header #headerTitle{
     text-align: center;
-    display: inline-block;
-    position: relative;
     width: 100%;
-    top: -23px;
+    position: relative;
+    top: -25px;
+    border-color: hotpink;
+    border-width: 1px;
+    border-style: solid;
     color: #9D9D9D;
 }
 
@@ -270,6 +270,8 @@ meter{
 .row{
     display: inline-block;
     width: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 .frmLabel{
