--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -307,6 +307,39 @@ meter{
     text-align: left;
 }
 
+/* Tables */
+
+.tableStyle:nth-child(odd){
+    background-color: #F2F2F2;
+    border-right-width: 1px;
+    border-style: solid;
+    border-color: #7C7B7B;
+}
+
+.tableStyle:nth-child(even){
+    background-color: #E8E8E8;
+    border-right-width: 1px;
+    border-style: solid;
+    border-color: #7C7B7B;
+}
+
+#fileTable{
+    text-align: left;
+}
+
+#fileTable tr{
+    border-width: 1px;
+    border-style: solid;
+    border-color: #7C7B7B;
+}
+
+#fileTable thead{
+    font-size: 13px;
+    font-weight: bold;
+    background-color: #7C7B7B;
+}
+
+
 /* Footer [Start] */
 
 #footer{
